--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".fragments.FragmentLoginFragment">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,6 +61,13 @@
             android:hint="@string/label_password"
             app:startIconDrawable="@drawable/ic_lock">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textSize="15sp" />
+
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
@@ -80,11 +88,5 @@
             android:drawableTint="#fff"></Button>
     </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:textSize="15sp" />
 
 </RelativeLayout>
