Previa a la demo

--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -10,11 +10,12 @@
         android:id="@+id/splashscreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/descripcionSplashScreen"
+        android:src="@drawable/hook"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/descripcionSplashScreen" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </RelativeLayout>
