--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,13 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentHome">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:textStyle="bold"
-        android:textSize="35dp"
+        android:textSize="35sp"
         android:textColor="@color/black"
         android:text="home" />
 
