--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="170dp"
-    android:background="@color/black">
+    android:background="#009688">
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/hook"
-        app:tint="@color/white"
+        app:tint="#E0F2F1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,8 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Menu"
-        android:textColor="#186497"
-        android:textSize="18sp"
+        android:textColor="#E0F2F1"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:gravity="center"
