--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/toolbar"
-    android:background="@color/purple_500"
+    android:background="#009688"
     android:elevation="8dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     >
