--- a/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
+++ b/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.FragmentFormularioAltaReporte">
+    tools:context=".fragments.FragmentFormularioAltaReporte"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/titulo_formulario"
