--- a/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
+++ b/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
@@ -53,6 +53,15 @@
             android:inputType="text" />
 
         <EditText
+            android:id="@+id/editFechaCaptura"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_top"
+            android:autofillHints=""
+            android:hint="Fecha captura"
+            android:inputType="text" />
+
+        <EditText
             android:id="@+id/editFoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
