--- a/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
+++ b/app/src/main/res/layout/fragment_formulario_alta_reporte.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,8 +44,6 @@
                 android:hint="@string/hint_lugar_captura"
                 android:inputType="text" />
 
-
-
             <EditText
                 android:id="@+id/editFechaCaptura"
                 android:layout_width="match_parent"
@@ -54,6 +52,19 @@
                 android:autofillHints=""
                 android:hint="Fecha captura"
                 android:inputType="text" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ingrese la ubicacion de la captura">
+
+            </TextView>
+
+            <fragment
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:id="@+id/mapView"
+                android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
             <ImageView
                 android:id="@+id/ivFoto"
@@ -80,6 +91,9 @@
                 android:text="@string/aceptar" />
 
         </LinearLayout>
+
+
+
 
     </ScrollView>
 
