muestro todos los reportes por ubicacion en el mapa

--- a/app/src/main/res/layout/fragment_mis_reportes.xml
+++ b/app/src/main/res/layout/fragment_mis_reportes.xml
@@ -9,10 +9,17 @@
     tools:context=".fragments.FragmentMisReportes">
 
 
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/mapView"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMisReportes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="320dp"
         android:gravity="center"
         android:textColor="@color/black"
         android:textStyle="bold" />
