--- a/app/src/main/res/layout/reporte_item.xml
+++ b/app/src/main/res/layout/reporte_item.xml
@@ -16,49 +16,43 @@
             android:id="@+id/ivReporte"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            tools:background="@color/black"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            tools:background="@color/black" />
 
         <TextView
             android:id="@+id/tvReporteTitulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#004D40"
             android:textSize="21sp"
             android:textStyle="bold"
-            android:textColor="#004D40"
-            tools:text="titulo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ivReporte"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/ivReporte"/>
-
-        <TextView
-            android:id="@+id/tvReporteLugarCaptura"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Lugar Captura"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvReporteTitulo"
-            app:layout_constraintStart_toEndOf="@id/ivReporte"/>
+            tools:text="titulo" />
 
         <TextView
             android:id="@+id/tvReporteDescripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="descripcion"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvReporteLugarCaptura"
-            app:layout_constraintStart_toEndOf="@id/ivReporte"/>
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ivReporte"
+            app:layout_constraintTop_toBottomOf="@id/tvReporteTitulo"
+            tools:text="Descripcion" />
 
         <TextView
             android:id="@+id/tvReporteFechaCaptura"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="fecha"
+            android:layout_width="wrap_content"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/ivReporte"
             app:layout_constraintTop_toBottomOf="@id/tvReporteDescripcion"
-            app:layout_constraintStart_toEndOf="@id/ivReporte"/>
-
+            app:layout_constraintVertical_bias="0.4"
+            tools:text="fecha" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
